fixed form by using z-index to put it at the front

--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,15 @@ body, html {
 
 /*Animations needes for animation container*/
 @keyframes intro-animation {
-    0% {background-position: bottom;}
-    100% {background-position: center;}
+    0% {background-position: bottom;height: 100vh;}
+    100% {background-position: center;height: 100vh;}
 }
 
 @keyframes fade-out {
-    0% {opacity: 1;}
+    0% {opacity: 1;height: 100vh}
     80% {opacity: 1;}
-    100% {opacity: 0;}
+    99% {opacity: 0;height: 100vh;}
+    100% {height: 0;}
 }
 
 @keyframes fade-in {
@@ -28,7 +29,7 @@ body, html {
 
 /*Animation container*/
 #animation-container {
-    height: 100vh;
+    height: 0;
     width: 100vw;
     background-image: url("../img/confetti-minimal.svg");
     background-size: 70%;
@@ -49,7 +50,7 @@ body, html {
 }
 
 #animation-container-2 {
-    height: 100vh;
+    height: 0;
     width: 100vw;
     background-image: url("../img/max-confetti.svg");
     background-size: 30%;
@@ -123,6 +124,7 @@ header, main, #navbar {
     animation-name: fade-in-content;
     animation-duration: 16s;
     animation-iteration-count: 1;
+    background-color: transparent;
 }
 
 /*Basic styling for elements*/
@@ -195,11 +197,12 @@ h3 > #highlight {
     height: 100vh;
     width: 100vw;
     position: fixed;
-    opacity: 0.1;
+    opacity: 0.5;
     animation-name: background-animation;
     animation-duration: 240s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    z-index: -1;
 }
 
 /*Styling for header*/
@@ -273,6 +276,7 @@ ul {
     align-items: start;
     margin-bottom: 9vh;
     height: 50vh;
+    z-index: 1;
 }
 
 label {
